# hatchi-ai

./: .codecov.yml  .gitignore  .pylintrc  README.md  pubspec.yaml  requirements.txt  wikisql_vocab.json
.github/workflows/: test.yml  test_pr.yml
hatchi/: __main__.py  test.py
hatchi/models/: seq2seq.py
hatchi/preprocess/: wikisql_dataset.py  wikisql_vocab.json
hatchi/tests/: test_main.py
hatchi/tests/unit/: test_seq2seq.py  test_wikisql_dataset.py
hatchi/utils/: general.py
lib/: bridge_generated.dart  main.dart
linux/: CMakeLists.txt
native/: Cargo.toml
native/src/: api.rs  bridge_generated.io.rs  bridge_generated.rs
scripts/: linters_parser.py  pylint_parser.py
