[package]
name = "native"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["staticlib","cdylib"]

[dependencies]
flutter_rust_bridge = "1"
sqlx = { version = "0.5", features = [  "runtime-async-std-native-tls",
"sqlite" ] }
async-std = { version = "1", features = [ "attributes" ] }
futures = "0.3.26"
anyhow = "1"
